# soundspace

./: .gitignore  README.md  config.yaml  dtypes.py  pyproject.toml
configs/: config.yaml  dataset.py  models.py
configs/annotations/: theme_labels.json
core/: embed.py
core/space/: annotate.py  knn.py  leiden.py  umap.py
dataset/: filter.py  load.py  metrics.py
eval/: __init__.py  cluster.py  coherence.py  embed.py  manifold.py  topology.py
features/: affect.py  parallel.py
features/audio/: io.py  rhythm.py  spectral.py  tonal.py
models/: clap.py  essentia.py  muq.py
notebooks/data/: merge_audio_features.csv  merge_preprocessed.csv  merge_with_theme_labels.csv
notebooks/pipeline/: 01_preprocess.ipynb  02_tag_analysis.ipynb  03_extract_features.ipynb  04_embedding_space.ipynb  05_retrieval.ipynb
search/: index.py  query.py
