[project]
name = "soundspace"
version = "0.1.0"
description = "an interactive semantic space of musical affect."
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "essentia>=2.1b6.dev1389",
    "gdown>=4.2.1",
    "librosa>=0.10,<0.11",
    "matplotlib>=3.5.1",
    "nexaai[mlx]>=1.0.31",
    "numpy>=1.22,<2.0",
    "pandas>=1.4,<2.0",
    "requests>=2.32.0",
    "scikit-learn>=1.3.2,<1.8",
    "scipy>=1.10,<1.15",
    "tqdm>=4.62.3",
    "urllib3>=1.26.19,<3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.0",
]
